Moved svg to icon, inline css to file, left aligned text, fixed margins

--- a/src/content/DiscordButton/DiscordButton.css
+++ b/src/content/DiscordButton/DiscordButton.css
@@ -1,7 +1,3 @@
-#discord-button {
-  padding: 10px 0px;
-}
-
 #discord-button .icon {
   width: 25px;
   height: 25px;
