--- a/src/content/Settings/Settings.css
+++ b/src/content/Settings/Settings.css
@@ -1,24 +1,30 @@
+.Settings {
+  text-align: left;
+  margin: 10px
+}
+
 .SettingsHeader {
-    font-size: 18px;
-    font-weight: bold;
-    margin-top: 20px;
-    text-align: left;
-    padding-left: 5px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.SettingsItems {
+  margin-bottom: 40px;
 }
 
 .SettingsButton {
-    width: 50%;
-    padding: 7px 20px;
-    font-size: 12px;
-    color: #fff;
-    background-color: #007bff;;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    margin: 10px 10px 2px 10px;
+  width: 50%;
+  padding: 7px 20px;
+  font-size: 12px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .SettingsButton:hover {
-    background-color: #0068d6;;
+  background-color: #0068d6;
 }
